syntax = "proto3";

package model;

import "subtitled_html.proto";
import "thumbnail.proto";
import "translation.proto";
import "voiceover.proto";

option java_package = "org.oppia.app.model";
option java_multiple_files = true;

// Corresponds to a single topic that can be read, played, trained, or reviewed.
message Topic {
  // The ID corresponding to the topic.
  string topic_id = 1;

  // The topic's name.
  string name = 2;

  // A brief description of the topic.
  string description = 3;

  // A list of summarized stories contained within this topic.
  repeated StorySummary story = 4;

  // A list of summarized skills contained within this topic.
  repeated SkillSummary skill = 5;

  // The thumbnail corresponding to this topic.
  LessonThumbnail topic_thumbnail = 6;

  // The number of on-disk bytes this topic consumes.
  int64 disk_size_bytes = 7;

  // A list of subtopic contained within this topic.
  repeated Subtopic subtopic = 8;
}

// Corresponds to a concept card that can be displayed for a specific skill.
message ConceptCard {
  // The ID corresponding to the skill this concept is representing.
  string skill_id = 1;

  // The skill's description that can help provide context on what content is being reviewed.
  string skill_description = 2;

  // The core explanation of the skill being reviewed.
  SubtitledHtml explanation = 3;

  // A list of worked examples to present to the learner.
  repeated SubtitledHtml worked_example = 4;

  // Mapping from content_id to a VoiceoverMapping for each SubtitledHtml in this concept card that has corresponding
  // recorded audio to play.
  map<string, VoiceoverMapping> recorded_voiceover = 5;

  // Mapping from content_id to a TranslationMapping for each SubtitledHtml in this concept card that has corresponding
  // translations.
  map<string, TranslationMapping> written_translation = 6;
}

// A summary of a story that can be played within a topic.
message StorySummary {
  // The ID of the story.
  string story_id = 1;

  // The name of the story.
  string story_name = 2;

  // The thumbnail corresponding to this story.
  LessonThumbnail story_thumbnail = 3;

  // A list of summarized chapters/explorations that can be played within the story.
  repeated ChapterSummary chapter = 4;
}

// A summary of a chapter/exploration that can be played.
message ChapterSummary {
  // The exploration ID associated with this chapter.
  string exploration_id = 1;

  // The chapter's name (which is the same as the exploration's title).
  string name = 2;

  // Summary of this chapter.
  string summary = 3;

  // Indicates the playable state of the current chapter, including whether it's already been completed.
  ChapterPlayState chapter_play_state = 4;

  // The thumbnail corresponding to this chapter.
  LessonThumbnail chapter_thumbnail = 5;
}

// A summary of a skill that can be trained or reviewed by the player.
message SkillSummary {
  // The ID of the skill.
  string skill_id = 1;

  // A brief description of the skill.
  string description = 2;

  // A URL corresponding to a thumbnail associated with this skill. If this is absent, the UI should show a reasonable
  // alternative.
  string thumbnail_url = 3;

  // The thumbnail corresponding to this skill.
  LessonThumbnail skill_thumbnail = 4;
}

// Corresponds to the on-disk storage representing all available topics for play.
message Classroom {
  // Known topics that the player can play.
  TopicSummary topic_summary = 1;

  // The last time this classroom was updated.
  int64 last_update_time_ms = 2;
}

// Corresponds to the list of topics that are currently being played and are not fully finished.
message OngoingTopicList {
  // All topics that are currently being played and have not finished.
  repeated Topic topic = 1;
}

// Corresponds to the list of topics that can be shown on the homescreen.
message TopicList {

  // All topics that are available to the player.
  repeated TopicSummary topic_summary = 2;
}

// Corresponds to the list of stories that have been completed across all topics.
message CompletedStoryList {
  // List of completed stories
  repeated CompletedStory completed_story = 1;
}

// The summary of a story that has been completed for a profile.
message CompletedStory {
  // The ID of the story being completed.
  string story_id = 1;

  // The name of the story being completed.
  string story_name = 2;

  // The name of the topic this story is part of.
  string topic_name = 3;

  // The thumbnail that should be displayed for this completed story.
  LessonThumbnail lesson_thumbnail = 4;
}

// Corresponds to the list of stories the player is currently playing across all topics.
message OngoingStoryList {
  // Ongoing stories from within the last 7 days.
  repeated PromotedStory recent_story = 1;

  // Other ongoing stories from longer than 7 days ago.
  repeated PromotedStory older_story = 2;
}

// The summary of a story that should be promoted, either because it's been started and not yet completed by the player,
// or because they have completed all other lessons and may find this one interesting.
message PromotedStory {
  // The ID of the story being promoted.
  string story_id = 1;

  // The name of the story being promoted.
  string story_name = 2;

  // The ID of the topic this story is part of.
  string topic_id = 3;

  // The name of the topic this story is part of.
  string topic_name = 4;

  // The name of the next chapter (exploration title) to complete.
  string next_chapter_name = 5;

  // The exploration id next chapter to complete.
  string exploration_id = 6;

  // The number of lessons the player has completed in this story. This may be 0 if the promoted story is promoted for
  // reasons other than to complete it (e.g. it's recommended).
  int32 completed_chapter_count = 7;

  // The total number of lessons this story contains.
  int32 total_chapter_count = 8;

  // The thumbnail that should be displayed for this promoted story.
  LessonThumbnail lesson_thumbnail = 9;
}

// A homescreen summary of a topic.
message TopicSummary {
  // The ID of the topic.
  string topic_id = 1;

  // The name of the topic.
  string name = 2;

  // The structural version of the topic.
  int32 version = 3;

  // The number of subtopics.
  int32 subtopic_count = 4;

  // The number of canonical stories.
  int32 canonical_story_count = 5;

  // The number of skills that have yet to be categorized.
  int32 uncategorized_skill_count = 6;

  // The number of additional, non-canonical stories.
  int32 additional_story_count = 7;

  // The total number of skills associated with this topic.
  int32 total_skill_count = 8;

  // The total number of lessons associated with this topic.
  int32 total_chapter_count = 9;

  // The associated thumbnail that should be displayed with this topic summary.
  LessonThumbnail topic_thumbnail = 10;
}

// Represents the play state of a single chapter.
enum ChapterPlayState {
  // The completion status is unknown.
  COMPLETION_STATUS_UNSPECIFIED = 0;

  // The chapter has not yet been started, but can be started by the player.
  NOT_STARTED = 1;

  // The chapter has not yet been started, and cannot be started since the player is missing prerequisites.
  NOT_PLAYABLE_MISSING_PREREQUISITES = 2;

  // The chapter has been started but not completed by the player.
  STARTED_NOT_COMPLETED = 3;

  // The chapter has been completed by the player.
  COMPLETED = 4;
}

// Top level proto used to store topic progress per-profile.
message TopicProgressDatabase {
  // Map from topic ID to TopicProgress.
  map<string, TopicProgress> topic_progress = 1;
}

// Represents the topic progress.
message TopicProgress {
  // The ID corresponding to the topic.
  string topic_id = 1;

  // Map from story ID to StoryProgress.
  map<string, StoryProgress> story_progress = 2;
}

// Represents the story progress.
message StoryProgress {
  // The ID corresponding to the story.
  string story_id = 1;

  // Map from exploration ID to ChapterPlayState.
  map<string, ChapterProgress> chapter_progress = 2;
}

// Represents the chapter progress.
message ChapterProgress {
  // The ID corresponding to the exploration.
  string exploration_id = 1;

  // The playability state of chapter.
  ChapterPlayState chapter_play_state = 2;

  // Timestamp to record last time the exploration was played in ms.
  int64 last_played_timestamp = 3;
}

// Represents user's preference for using cellular data
message CellularDataPreference {
  // Preference on whether to hide CellularDataDialogFragment
  bool hide_dialog = 1;

  // Preference on whether to use cellular data
  bool use_cellular_data = 2;
}

// Corresponds to a single subtopic.
message Subtopic {
  // The ID of the subtopic.
  string subtopic_id = 1;

  // The title of the subtopic.
  string title = 2;

  // The list of skill ids associated with the subtopic.
  repeated string skill_ids = 3;

  // A URL corresponding to a thumbnail associated with this subtopic. If this is absent, the UI should show a reasonable
  // alternative.
  string thumbnail_url = 4;

  // The thumbnail corresponding to this subtopic.
  LessonThumbnail subtopic_thumbnail = 5;
}

// Corresponds to a revision card that can be displayed for a specific subtopic.
message RevisionCard {
  // The title corresponding to the subtopic.
  string subtopic_title = 1;

  // The core explanation of the subtopic being revised.
  SubtitledHtml page_contents = 3;

  // Mapping from content_id to a VoiceoverMapping for each SubtitledHtml in this revision card that has corresponding
  // recorded audio to play.
  map<string, VoiceoverMapping> recorded_voiceover = 5;

  // Mapping from content_id to a TranslationMapping for each SubtitledHtml in this revision card that has corresponding
  // translations.
  map<string, TranslationMapping> written_translation = 6;
}

// Corresponds to a single topic that can be read, played, trained, or reviewed.
message TopicBackend {
  // The ID corresponding to the topic.
  string topic_id = 1;

  // The topic's name.
  string name = 2;

  // A brief description of the topic.
  string description = 3;

  // A list of summarized stories contained within this topic.
  repeated StorySummary story = 4;

  // A list of summarized skills contained within this topic.
  repeated SkillSummary skill = 5;

  // The thumbnail corresponding to this topic.
  LessonThumbnail topic_thumbnail = 6;

  // The number of on-disk bytes this topic consumes.
  int64 disk_size_bytes = 7;

  // A list of subtopic contained within this topic.
  repeated Subtopic subtopic = 8;
}

message TopicDatabase{
    map<string, TopicDomain> topic_database = 1;
}

// Corresponds to a single topic that can be read, played, trained, or reviewed.
message TopicDomain{
  // The ID corresponding to the topic.
  string topic_id = 1;

  // The topic's name.
  string name = 2;

  // A brief description of the topic.
  string description = 3;

  // The thumbnail corresponding to this topic.
  LessonThumbnail topic_thumbnail = 4;

  // The number of on-disk bytes this topic consumes.
  int64 disk_size_bytes = 5;
}

// Corresponds to a single topic that can be read, played, trained, or reviewed.
message TopicView {
  // The ID corresponding to the topic.
  string topic_id = 1;

  // The topic's name.
  string name = 2;

  // A brief description of the topic.
  string description = 3;

  // The thumbnail corresponding to this topic.
  LessonThumbnail topic_thumbnail = 4;

  // The number of on-disk bytes this topic consumes.
  int64 disk_size_bytes = 5;
}

// Top level proto used to store subtopic summaries.
message SubtopicDatabase{
  // Subtopic ID to subtopic summary mapping.
  map<string, SubtopicDomain> subtopic_database = 1;
}

// Corresponds to a single subtopic.
message SubtopicDomain {
  // The topic ID associated with this subtopic.
  string topic_id = 1;

  // The ID of the subtopic.
  string subtopic_id = 2;

  // The title of the subtopic.
  string title = 3;

  // The list of skill ids associated with the subtopic.
  repeated string skill_ids = 4;

  // A URL corresponding to a thumbnail associated with this subtopic. If this is absent, the UI should show a reasonable
  // alternative.
  string thumbnail_url = 5;

  // The thumbnail corresponding to this subtopic.
  LessonThumbnail subtopic_thumbnail = 6;
}

// Corresponds to a single subtopic.
message SubtopicView {
  // The ID of the subtopic.
  string subtopic_id = 1;

  // The title of the subtopic.
  string title = 2;

  // The list of skill ids associated with the subtopic.
  repeated string skill_ids = 3;

  // A URL corresponding to a thumbnail associated with this subtopic. If this is absent, the UI should show a reasonable
  // alternative.
  string thumbnail_url = 4;

  // The thumbnail corresponding to this subtopic.
  LessonThumbnail subtopic_thumbnail = 5;
}

// Top level proto used to store revision card content.
message RevisionCardDatabase{
  // Subtopic title to subtopic content mapping.
  map<string, RevisionCardDomain> subtopic_content_database = 1;
}

// Corresponds to a revision card that is stored in database.
message RevisionCardDomain {
  // The title corresponding to the subtopic.
  string subtopic_title = 1;

  // The core explanation of the subtopic being revised.
  SubtitledHtml page_contents = 2;
}

// Corresponds to a revision card that can be displayed for a specific subtopic.
message RevisionCardView {
  // The title corresponding to the subtopic.
  string subtopic_title = 1;

  // The core explanation of the subtopic being revised.
  SubtitledHtml page_contents = 2;
}

// Corresponds to a revision card that can be displayed for a specific subtopic.
message SubtopicContentView {
  // The title corresponding to the subtopic.
  string subtopic_title = 1;

  // The core explanation of the subtopic being revised.
  SubtitledHtml page_contents = 2;

  // Mapping from content_id to a VoiceoverMapping for each SubtitledHtml in this revision card that has corresponding
  // recorded audio to play.
  map<string, VoiceoverMapping> recorded_voiceover = 3;

  // Mapping from content_id to a TranslationMapping for each SubtitledHtml in this revision card that has corresponding
  // translations.
  map<string, TranslationMapping> written_translation = 4;
}

// Top level proto used to store skill summaries.
message SkillSummaryDatabase{
  // Skill id to skill summary map.
  map<string, SkillSummaryDomain> skill_summary_database = 1;
}

// A summary of a skill that can be trained or reviewed by the player.
message SkillSummaryDomain {
  // The ID of the skill.
  string skill_id = 1;

  // A brief description of the skill.
  string description = 2;

  // A URL corresponding to a thumbnail associated with this skill. If this is absent, the UI should show a reasonable
  // alternative.
  string thumbnail_url = 3;

  // The thumbnail corresponding to this skill.
  LessonThumbnail skill_thumbnail = 4;
}

// A summary of a skill that can be trained or reviewed by the player.
message SkillSummaryView {
  // The ID of the skill.
  string skill_id = 1;

  // A brief description of the skill.
  string description = 2;

  // A URL corresponding to a thumbnail associated with this skill. If this is absent, the UI should show a reasonable
  // alternative.
  string thumbnail_url = 3;

  // The thumbnail corresponding to this skill.
  LessonThumbnail skill_thumbnail = 4;
}

// Top level proto used to store story summaries.
message StorySummaryDatabase{
  // Story ID to story summary map.
  map<string, StorySummaryDomain> story_summary_database = 1;
}

// A summary of a story that can be played within a topic.
message StorySummaryDomain {
  // The topic ID associated with this story.
  string topic_id = 1;

  // The ID of the story.
  string story_id = 2;

  // The name of the story.
  string story_name = 3;

  // The thumbnail corresponding to this story.
  LessonThumbnail story_thumbnail = 4;
}

// Top level proto used to store chapter summaries.
message ChapterSummaryDatabase{
  // Exploration ID to chapter summary map.
  map<string, ChapterSummaryDomain> chapter_summary_database = 1;
}

// A summary of a chapter/exploration that can be played.
message ChapterSummaryDomain {
  // The topic ID associated with this chapter.
  string topic_id = 1;

  // The story ID associated with this chapter.
  string story_id = 2;

  // The exploration ID associated with this chapter.
  string exploration_id = 3;

  // The chapter's name (which is the same as the exploration's title).
  string name = 4;

  // Summary of this chapter.
  string summary = 5;

  // Indicates the playable state of the current chapter, including whether it's already been completed.
  ChapterPlayState chapter_play_state = 6;

  // The thumbnail corresponding to this chapter.
  LessonThumbnail chapter_thumbnail = 7;
}

// A summary of a story that can be played within a topic.
message StorySummaryView {
  // The ID of the story.
  string story_id = 1;

  // The name of the story.
  string story_name = 2;

  // The thumbnail corresponding to this story.
  LessonThumbnail story_thumbnail = 3;

  // A list of summarized chapters/explorations that can be played within the story.
  repeated ChapterSummaryView chapter = 4;
}

// A summary of a chapter/exploration that can be played.
message ChapterSummaryView {
  // The exploration ID associated with this chapter.
  string exploration_id = 1;

  // The chapter's name (which is the same as the exploration's title).
  string name = 2;

  // Summary of this chapter.
  string summary = 3;

  // Indicates the playable state of the current chapter, including whether it's already been completed.
  ChapterPlayState chapter_play_state = 4;

  // The thumbnail corresponding to this chapter.
  LessonThumbnail chapter_thumbnail = 5;
}

// Corresponds to the list of topics that can be shown on the homescreen.
message TopicSummaryListView {
  // All topics that are available to the player.
  repeated TopicSummaryView topic_summary = 2;
}

// A homescreen summary of a topic.
message TopicSummaryView {
  // The ID of the topic.
  string topic_id = 1;

  // The name of the topic.
  string name = 2;

  // The associated thumbnail that should be displayed with this topic summary.
  LessonThumbnail topic_thumbnail = 3;

  // The structural version of the topic.
  int32 version = 4;

  // The total number of lessons associated with this topic.
  int32 total_chapter_count = 5;
}
